<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            android:backgroundTint="@color/white" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cons_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/root_start_guideline"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="5dp"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/root_end_guideline"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_end="16dp" />

                <View
                    android:id="@+id/field_search"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/search_input_style"
                    app:layout_constraintEnd_toStartOf="@+id/root_end_guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Search"
                    android:layout_marginStart="13dp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/field_search"
                    app:layout_constraintEnd_toStartOf="@+id/root_end_guideline"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/image_search"
                    app:layout_constraintTop_toTopOf="@+id/field_search" />

                <ImageView
                    android:id="@+id/image_search"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/search_white"
                    app:layout_constraintBottom_toBottomOf="@+id/field_search"
                    app:layout_constraintEnd_toEndOf="@+id/field_search"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/field_search" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/mainTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <TextView
                android:id="@+id/textTabStocks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stocks_text"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textTabFavourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favourite_text"
                android:layout_marginLeft="16dp"
                android:textStyle="bold"
                android:textColor="@color/tabs_text_color"
                android:textSize="20sp"/>

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>